tests/snapshots/element_attributes__it_can_parse_attribute_key_mixed_case_symbols.snap
---
source: tests/element_attributes.rs
expression: ast
---
Ast {
    tree_type: DocumentFragment,
    nodes: [
        Element(
            Element {
                name: "div",
                variant: Normal,
                attributes: {
                    "data-cat": Some(
                        "morris",
                    ),
                },
                nodes: [],
            },
        ),
    ],
}
