tests/snapshots/element_attributes__it_can_parse_attribute_multiple_values_single_quote.snap
---
source: tests/element_attributes.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "id": null,
        "name": "div",
        "variant": "void",
        "attributes": {
          "cat": "mjau mjau"
        },
        "classes": [],
        "nodes": []
      }
    }
  ]
}
