tests/snapshots/element_attributes__it_can_parse_attribute_with_empty_value.snap
---
source: tests/element_attributes.rs
expression: ast
---
Ast {
    tree_type: DocumentFragment,
    nodes: [
        Element(
            Element {
                name: "img",
                variant: Void,
                attributes: {
                    "hidden": None,
                },
                nodes: [],
            },
        ),
    ],
}
