tests/snapshots/element_attributes__it_can_parse_classes.snap
---
source: tests/element_attributes.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "id": null,
        "name": "img",
        "variant": "void",
        "attributes": {},
        "classes": [
          "a",
          "b",
          "c"
        ],
        "nodes": []
      }
    }
  ]
}
