tests/snapshots/element_attributes__it_can_parse_double_quote.snap
---
source: tests/element_attributes.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "id": "one",
      "name": "div",
      "variant": "normal"
    }
  ]
}
