tests/snapshots/element_attributes__it_can_parse_id.snap
---
source: tests/element_attributes.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "id": "a",
      "name": "img",
      "variant": "void"
    }
  ]
}
