tests/snapshots/element_attributes__it_can_parse_multiple_attributes_double_quote.snap
---
source: tests/element_attributes.rs
assertion_line: 50
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    {
      "name": "div",
      "variant": "normal",
      "attributes": {
        "cat": "mjau",
        "dog": "woff",
        "ape": "oh"
      }
    }
  ]
}
