tests/snapshots/element_attributes__it_can_parse_multiple_attributes_where_whitespace_does_not_matter_for_keys.snap
---
source: tests/element_attributes.rs
assertion_line: 43
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    {
      "name": "div",
      "variant": "normal",
      "attributes": {
        "cat": "mjau",
        "dog": "  woff  ",
        "ape": "oh"
      }
    }
  ]
}
