tests/snapshots/element_attributes__it_can_parse_no_quote.snap
---
source: tests/element_attributes.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "id": "one",
      "name": "div",
      "variant": "normal"
    }
  ]
}
