tests/snapshots/element_attributes__it_can_parse_single_quote.snap
---
source: tests/element_attributes.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "id": "one",
        "name": "div",
        "variant": "normal",
        "attributes": {},
        "classes": [],
        "nodes": []
      }
    }
  ]
}
